Fix horizontal overflow for monster forms on small windows

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1, h2 {
     display: grid;
     grid-template-columns: 3fr 2fr 3fr;
     grid-template-rows: 44ex 99ex;
-    min-width: 75em;
+    min-width: 77em;
     max-width: 82em;
 }
 .top-row {
